test_suite5/ALAN/test_suite/alan-2022-examples/failing/006880_mutation.alan
source qsU begin 13 9 then relax end end
